# svarunid.github.io

./: .gitignore  AGENTS.md  Gemfile  README.md  _config.yml
.github/workflows/: deploy-server.yml  deploy.yml
_includes/: head.html
_posts/: 2024-01-28-welcome-to-jekyll.markdown
client/: .env.example  .gitignore  AGENTS.md  eleventy.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/src/: chat.html  index.html
client/src/_data/: achievements.json  experience.json  projects.json
client/src/_data/posts/: linkedin.json  x.json
client/src/_includes/components/: achievements.html  experience.html  projects.html  social-marquee.html
client/src/scripts/: chat.ts  config.ts  home.ts  session.ts
client/src/scripts/components/: chat-message.ts
client/src/scripts/utils/: markdown.ts
client/src/styles/: input.css
data/: journey.md  resume.md
data/posts/: linkedin.md  x.md
server/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  actions.txt  docker-compose.yml  prompt.txt  pyproject.toml
server/app/: config.py  main.py  utils.py
server/app/agent/: __init__.py  agent.py  knowledge.py  sessions.py  tools.py
server/app/core/: __init__.py  agent.py  database.py  knowledge.py  mcp_client.py  openrouter.py  sessions.py
server/app/routes/: admin.py  chat.py
server/data/: journey.md  projects.toon
